# crawlina

./: .env  Cargo.toml  docker-compose.yml
migrations/: 20230702065422_create_channels_table.up.sql  20230702185857_change_channel_key_to_serial.up.sql  20230702190730_set_channel_key_to_primary.up.sql  20230702191050_create_entry_table.up.sql  20230703192629_change_entries_key_to_serial.up.sql  20230703211656_add_unread_items_to_channels.up.sql
src/: main.rs  router.rs
src/routes/: channels.rs  feeds.rs  mod.rs
