[package]
name = "crawlina"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "crawlina"

[dependencies]
axum = "0.6"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
feed-rs = "1.3.0"
reqwest = "0.11.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"] }
tokio = { version = "1.29", features = ["full"] }
tower-http = { version = "0.4", features = ["cors"] }
uuid = { version = "1.4", features = ["serde", "v4"] }
